[package]
name = "rust-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
crossbeam = "0.8.2"
crossbeam-channel = "0.5.8"
lazy_static = "1.4.0"
rayon = "1.7.0"
data-encoding = "2.4.0"
ring = "0.16.20"
chrono = "0.4.30"